--- a/clone.html
+++ b/clone.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title></title>
 	 <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
-	<link rel="stylesheet" type="text/css" href="clonestyle.css">
+	<link rel="stylesheet" type="text/css" href="./clonestyle.css">
 </head>
 <body>
  <header>
